--- a/doc_out/installation.html
+++ b/doc_out/installation.html
@@ -14,7 +14,7 @@
     <link rel="index" title="Index" href="genindex.html" />
     <link rel="search" title="Search" href="search.html" />
     <link rel="next" title="Getting Started with Tomtag" href="usage.html" />
-    <link rel="prev" title="TomTag library documentation" href="index.html" />
+    <link rel="prev" title="TomTag documentation" href="index.html" />
    
   <link rel="stylesheet" href="_static/custom.css" type="text/css" />
   
@@ -121,7 +121,7 @@
 <h3>Related Topics</h3>
 <ul>
   <li><a href="index.html">Documentation overview</a><ul>
-      <li>Previous: <a href="index.html" title="previous chapter">TomTag library documentation</a></li>
+      <li>Previous: <a href="index.html" title="previous chapter">TomTag documentation</a></li>
       <li>Next: <a href="usage.html" title="next chapter">Getting Started with Tomtag</a></li>
   </ul></li>
 </ul>
